--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,3 +2,10 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
 // @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300&display=swap');
 @import 'component.scss';
+
+// Bootstrap CSS
+@import url("https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css");
+
+// Poppins Font
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+
