making transaction page and trying graph feature

--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -83,3 +83,17 @@ main{
     color: white;
 }
 
+
+//TRANSAKSI
+
+#judul-tabel-transaksi, #konten-tabel-transaksi{
+    background-color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 8px 16px;
+}
+
+.table-container{
+    border: none;
+    border-radius: 10px;
+}
