--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -158,3 +158,125 @@ main{
     outline: none; /* Completely remove focus outline */
     box-shadow: none; /* Remove any focus-related box shadow */
 }
+
+.left-side,
+.right-side {
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
+    justify-content: center;
+    background-color: #E1F7F5;
+}
+
+.right-side {
+    background-color: #ffffff;
+}
+
+.right-side .login-section h2 {
+    margin-bottom: 3.125rem;
+}
+
+.login-section h2,
+.logo-size {
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.logo-size {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 2;
+}
+
+.login-section p {
+    margin-top: 3.125rem;
+    margin-bottom: 3.125rem;
+    font-size: 1.5rem;
+}
+
+.login-section {
+    text-align: center;
+}
+
+.btn-custom-register {
+    background-color: #ffffff;
+    border-radius: 0.625rem;
+    color: #1E0342;
+    font-size: 1.25rem;
+    font-weight: 600;
+    min-width: 100vh;
+    border: 0.125rem solid #1E0342;
+}
+
+.btn-custom-register:hover {
+    color: #ffffff;
+    background-color: #1E0342;
+}
+
+.form-signup {
+    min-width: 100vh;
+}
+
+.bg-color-signup {
+    background-color: #ffffff;
+}
+
+.adjust-align-left {
+    font-size: 1.25rem;
+    text-align: left;
+}
+
+.btn-daftar-signup {
+    color: #ffffff;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border-radius: 0.625rem;
+    min-width: inherit;
+    background-color: #1E0342;
+    margin-top: 3.125rem;
+    border: 0.125rem solid #1E0342;
+}
+
+.btn-daftar-signup:hover {
+    border: 0.125rem solid #1E0342;
+    background-color: #ffffff;
+    color: #1E0342;
+}
+
+.adjust-border-input {
+    border-radius: none;
+}
+
+.custom-input-group .form-control {
+    border-radius: 0;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border: 1px solid #9AC8CD;
+    padding: 0.75rem 1rem;
+    transition: box-shadow 0.3s ease;
+    min-height: 2.5rem;
+}
+
+.input-group-prepend .input-group-text {
+    border-radius: 0;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border: 1px solid #9AC8CD;
+    background-color: #9AC8CD;
+    border-right: none;
+}
+
+.custom-input-group .form-control {
+    border-left: none;
+}
+
+.custom-input-group {
+    min-height: 2.5rem;
+}
+
+.input-group-prepend {
+    justify-content: center;
+}
+
+.right-side .login-section h2 {
+    margin-bottom: 2.5rem;
+}
