--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -3,7 +3,7 @@
     background-color: rgba(30, 3, 66, 1);
     height: 100%;
     position: fixed;
-    padding-left: 32px;
+    padding-left: 2rem;
     font-weight: 500;
     font-size: 1.3rem;
 }
@@ -30,7 +30,7 @@ body{
 
 main{
     margin-left: 20%;
-    padding-left: 72px;
+    padding-left: 4.5rem;
 }
 
 #profile{
@@ -49,23 +49,19 @@ main{
     font-weight: 600;
 }
 
-#basic-addon1 {
-    background: #E0E0E0;
-}
-
 .form-group-select select {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
     background-image: url('https://api.iconify.design/mdi/chevron-down.svg?color=%23000000');
     background-repeat: no-repeat;
-    background-position: right 10px center;
-    background-size: 27px;
-    padding-right: 30px; /* Add padding to make room for the icon */
+    background-position: right 0.625rem center;
+    background-size: 1.688rem;
+    padding-right: 1.875rem; /* Add padding to make room for the icon */
 }
 
 .border-style {
-    border:  1px solid #000000;
+    border:  0.063rem solid #000000;
     border-radius: 0.6rem;
     font-size: 1.25rem;
 }
@@ -74,8 +70,8 @@ main{
     display: flex;
     align-items: center; /* This aligns the content vertically in the center */
     justify-content: center;
-    height: 40px; /* Set a consistent height for the input group */
-    width: 164px;
+    height: 2.5rem; /* Set a consistent height for the input group */
+    width: 10.25rem;
 }
 
 .input-group-outline .btn {
@@ -95,13 +91,13 @@ main{
 }
 
 .custom-btn {
-    width: 168px;
-    height: 40px;
+    width: 10.5rem;
+    height: 2.5rem;
     font-weight: 600;
     background-color: #1E0342; /* Set the background color */
     color: #ffffff; /* Set the text color to white */
     border: none; /* Remove any default border */
-    font-size: 25px; /* Adjust the font size */
+    font-size: 1.25rem; /* Adjust the font size */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -125,18 +121,18 @@ main{
 }
 
 .custom-modal-width {
-    max-width: 600px;
+    max-width: 37.5rem;
     width: 100%;
 }
 
 .custom-modal-btn {
-    width: 343px;
-    height: 40px;
+    width: 21.438rem;
+    height: 2.5rem;
     font-weight: 600;
     background-color: #1E0342; /* Set the background color */
     color: #ffffff; /* Set the text color to white */
     border: none; /* Remove any default border */
-    font-size: 25px; /* Adjust the font size */
+    font-size: 1.563rem; /* Adjust the font size */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -184,8 +180,8 @@ main{
 
 .logo-size {
     position: absolute;
-    top: 20px;
-    left: 20px;
+    top: 1.25rem;
+    left: 1.25rem;
     z-index: 2;
 }
 
@@ -250,8 +246,8 @@ main{
 
 .custom-input-group .form-control {
     border-radius: 0;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    border: 1px solid #9AC8CD;
+    box-shadow: 0rem 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
+    border: 0.063rem solid #9AC8CD;
     padding: 0.75rem 1rem;
     transition: box-shadow 0.3s ease;
     min-height: 2.5rem;
@@ -259,8 +255,8 @@ main{
 
 .input-group-prepend .input-group-text {
     border-radius: 0;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    border: 1px solid #9AC8CD;
+    box-shadow: 0rem 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
+    border: 0.063rem solid #9AC8CD;
     background-color: #9AC8CD;
     border-right: none;
 }
