--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -241,7 +241,7 @@ main{
 }
 
 .adjust-border-input {
-    border-radius: none;
+    border-radius: 0;
 }
 
 .custom-input-group .form-control {
@@ -258,11 +258,23 @@ main{
     box-shadow: 0rem 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
     border: 0.063rem solid #9AC8CD;
     background-color: #9AC8CD;
-    border-right: none;
+}
+
+.input-group-append .input-group-text {
+    border-radius: 0;
+    box-shadow: 0;
+    border-left: 0;
+    border: 0.063rem solid #9AC8CD;
+    background-color: #9AC8CD;
 }
 
 .custom-input-group .form-control {
-    border-left: none;
+    border-left: 0;
+    padding-right: 2.5rem;
+}
+
+.custom-input-group .edit-password {
+    border-right: 0;
 }
 
 .custom-input-group {
