--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -97,3 +97,16 @@ main{
     border: none;
     border-radius: 10px;
 }
+
+
+//ARUS KAS
+
+.aruskas-container{
+    width: 72vw;
+    height: 70vh;
+    background-color: white;
+    border: none;
+    border-radius: 10px;
+    margin-top: 5vh;
+    padding: 21px 45px;
+}
