--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -155,21 +155,22 @@ main{
     box-shadow: none; /* Remove any focus-related box shadow */
 }
 
+body{
+    background: #ffffff;
+}
+
 .left-side,
 .right-side {
     display: flex;
     align-items: center;
     min-height: 100vh;
     justify-content: center;
-    background-color: #E1F7F5;
-}
-
-.right-side {
     background-color: #ffffff;
 }
 
-.right-side .login-section h2 {
-    margin-bottom: 3.125rem;
+.right-side .login-section h2,
+.left-side .login-section h2 {
+    margin-bottom: 2.5rem;
 }
 
 .login-section h2,
@@ -182,7 +183,7 @@ main{
     position: absolute;
     top: 1.25rem;
     left: 1.25rem;
-    z-index: 2;
+    z-index: 5;
 }
 
 .login-section p {
@@ -193,6 +194,7 @@ main{
 
 .login-section {
     text-align: center;
+    color: #000000;
 }
 
 .btn-custom-register {
@@ -285,6 +287,103 @@ main{
     justify-content: center;
 }
 
-.right-side .login-section h2 {
-    margin-bottom: 2.5rem;
+//the overlay of the container
+.overlay-container{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    padding: 0;
+    overflow: hidden;
+    transition: transform 0.6s ease-in-out;
+    z-index: 4;
+}
+#main.right-panel-active .overlay-container{
+    transform: translateX(-100%);
+}
+.overlay{
+    position: relative;
+    color: #fff;
+    background: #ff416c;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    background: #e1f7f5;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
+}
+#main.right-panel-active .overlay{
+    transform: translateX(50%);
+}
+.overlay-left, .overlay-right{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    top: 0;
+    height: 100%;
+    width: 50%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
+}
+.overlay-left{
+    transform: translateX(-20%);
+}
+.overlay-right{
+    right: 0;
+    transform: translateX(0);
+}
+
+#main{
+    overflow: hidden;
+}
+.transitionClassSignUp, .transitionClassSignIn {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
+}
+.transitionClassSignUp{
+    width: 50%;
+    opacity: 0;
+    z-index: 1;
+}
+.transitionClassSignIn{
+    width: 50%;
+    z-index: 2;
+}
+
+#main.right-panel-active .transitionClassSignIn{
+    transform: translateX(100%);
+}
+#main.right-panel-active .transitionClassSignUp{
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 3;
+}
+
+#main.right-panel-active .overlay-left{
+    transform: translateX(0);
+}
+#main.right-panel-active .overlay-right{
+    transform: translateX(20%);
+}
+
+@keyframes show{
+    0%,
+    49.99%{
+        opacity: 0;
+        z-index: 1;
+    }
+
+    50%,
+    100% {
+        opacity: 1;
+        z-index: 5;
+    }
 }
