fixing aruskas view

--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -459,8 +459,9 @@ main{
     padding: 21px 45px;
 }
 
-.dropdown-item-month, .dropdown-item-month:hover{
-    text-decoration: none;
-    color: black;
-    padding: 5px;
+#monthDropdownButton, #yearDropdownButton{
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: white;
+    padding: 10px;
 }
