editing transaction export feature

--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -446,6 +446,13 @@ main{
     border-radius: 10px;
 }
 
+#exportDropdownButton{
+    border-radius: 10px;
+    background-color: rgba(30, 3, 66, 1);
+    color: white;
+    padding: 10px;
+}
+
 
 //ARUS KAS
 
