finishing export featutre

--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -446,7 +446,7 @@ main{
     border-radius: 10px;
 }
 
-#exportDropdownButton{
+#exportDropdownButton, #exportButton{
     border-radius: 10px;
     background-color: rgba(30, 3, 66, 1);
     color: white;
