finishing export settings for each month and year for all pages, and fixing logic in LabaRugi page

--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -543,7 +543,7 @@ main{
     border-radius: 10px;
 }
 
-#exportDropdownButton, #exportButton{
+#exportDropdownButton, #exportButton, #exportLabaRugiButton{
     border-radius: 10px;
     background-color: rgba(30, 3, 66, 1);
     color: white;
