fixing merge bugs and trend analysis page

--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -593,7 +593,7 @@ main{
     padding: 21px 45px;
 }
 
-#monthDropdownButton, #yearDropdownButton{
+#monthDropdownButton, #yearDropdownButton, #timeRangeButton{
     border: 2px solid black;
     border-radius: 10px;
     background-color: white;
