--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -45,7 +45,8 @@ main{
     float: bottom;
 }
 
-#addDaftarBarang {
+#addDaftarBarang, 
+#addDaftarBarangOnboarding {
     font-weight: 600;
     border: none;
     border-radius: 0.6rem;
@@ -56,7 +57,8 @@ main{
     box-shadow: none;
 }
 
-#addDaftarBarang:hover {
+#addDaftarBarang:hover, 
+#addDaftarBarangOnboarding:hover {
     background-color: #E0E0E0;
     color: #1E0342;
 }
