finshing onboarding table layout

--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -99,6 +99,13 @@ main{
     width: 95%;
 }
 
+.border-style-jenisBarang-onboarding {
+    border:  0.063rem solid #000000;
+    border-radius: 0.6rem;
+    height: 2.35rem;
+    width: 100%;
+}
+
 .border-style-jenisBarangJumlah {
     border:  0.063rem solid #000000;
     border-radius: 0.6rem;
