--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -670,3 +670,33 @@ main{
     padding: 10px;
     width: 15vw;
 }
+
+//REMINDER
+#calendar{
+    height: 100vh;
+    width: 70vw;
+    background-color: white;
+}
+
+.fc .fc-col-header-cell a {
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.fc-col-header {
+    background-color: #f5f5f5;
+}
+
+.fc-daygrid-day-number {
+    color: black;
+    font-weight: bold;
+}
+
+.fc-daygrid-day.fc-day-past .fc-daygrid-day-number {
+    color: #9e9e9e;
+}
+
+.fc-daygrid-day.fc-day-today .fc-daygrid-day-number {
+    color: #1E0342;
+}
