--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -270,13 +270,17 @@ main{
     margin-bottom: 2.5rem;
 }
 
+.icon-size {
+    width: 10vw;
+}
+
 .login-section h2,
 .logo-size {
     font-size: 2.5rem;
     font-weight: bold;
 }
 
-.logo-size {
+.logo-size, .icon-size {
     position: absolute;
     top: 1.25rem;
     left: 1.25rem;
