fix: fix responsiveness in dashboard page

--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -227,7 +227,7 @@ main{
 }
 
 .custom-modal-btn {
-    width: 30rem;
+    width: 47.5%;
     height: 3rem;
     font-weight: 600;
     background-color: #1E0342; /* Set the background color */
