--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -694,20 +694,29 @@ main{
 
 //UTANG PIUTANG
 
-#utangButton{
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+#utangFilterGroup .btn-group .btn {
+    border-width: 2px 0 2px 2px;
+    margin: 0;
+    transition: background-color 0.3s ease, border-color 0.3s ease, color 0.3s ease;
 }
 
-.btn-outline-primary {
+#utangFilterGroup .btn-group .btn:first-of-type {
+    border-radius: 5px 0 0 5px;
+}
+
+#utangFilterGroup .btn-group .btn:last-of-type {
+    border-radius: 0 5px 5px 0;
+    border-right-width: 2px;
+}
+
+#utangFilterGroup .btn-group .btn + .btn {
+    border-left-width: 0;
+}
+
+.btn-outline-primary.active, .btn-check:checked + .btn-outline-primary {
+    background-color: rgba(30, 3, 66, 1) !important;
     border-color: rgba(30, 3, 66, 1) !important;
-    border: 2px solid;
-    color: rgba(30, 3, 66, 1) !important;
-    background-color: white !important;
-    transition: all 0.2s ease-in-out;
-    font-size: 1.25rem;
-    padding-left: 20px;
-    padding-right: 20px;
+    color: #fff !important;
 }
 
 .btn-outline-primary:hover {
@@ -716,11 +725,14 @@ main{
     color: rgba(30, 3, 66, 1) !important;
 }
 
-.btn-check:checked + .btn-outline-primary,
-.btn-outline-primary.active {
-    background-color: rgba(30, 3, 66, 1) !important;
+.btn-outline-primary {
     border-color: rgba(30, 3, 66, 1) !important;
-    color: #fff !important;
+    border: 2px solid;
+    color: rgba(30, 3, 66, 1) !important;
+    background-color: white !important;
+    font-size: 1.25rem;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .btn-outline-primary {
@@ -731,6 +743,11 @@ main{
     background-color: rgba(30, 3, 66, 1);
     color: white;
     border-color: rgba(30, 3, 66, 1);
+}
+
+#utangButton {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
 //REMINDER
