fix: benerin halaman utama paddingnya

--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -617,9 +617,10 @@ main{
 
 .dashboard-trenkeuntungan{
     background-color: white;
-    height: 50vh;
+    height: 45vh;
     width: 71.7vw;
-    padding: 16px;
+    padding: 40px;
+    padding: 24px 38px;
     margin-top: 5vh;
     border-radius: 20px;
 }
