--- a/resources/scss/component.scss
+++ b/resources/scss/component.scss
@@ -354,7 +354,7 @@ main{
 .right-side {
     display: flex;
     align-items: center;
-    min-height: 650px;
+    min-height: 700px;
     justify-content: center;
     background-color: #ffffff;
 }
@@ -567,7 +567,7 @@ main{
     left: 50%;
     width: 50%;
     height: 100%;
-    min-height: 650px;
+    min-height: 700px;
     padding: 0;
     overflow: hidden;
     transition: transform 0.6s ease-in-out;
@@ -963,7 +963,8 @@ table td {
     }
 
     .below-1204 {
-        min-height: 650px;
+        min-height: 700px;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -978,8 +979,17 @@ table td {
         min-width: auto;
         display: block;
         margin: 3.125rem auto;
+        margin-bottom: 0;
     }
 
+    .signup-prompt {
+        margin: 0;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%) translateY(-1.5rem);
+        text-align: center;
+        color: #000000;
+    }
 }
 
 @media (max-width: 1028px) {
